# os-utils

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  version.rs
src/info/: mod.rs
src/info/os/: macos.rs  mod.rs  windows.rs
src/info/os/linux/: debian.rs  mod.rs  ubuntu.rs
